--- a/index.html
+++ b/index.html
@@ -112,20 +112,20 @@
         <h2>Specialized Clarity Programs</h2>
         <p>Targeted training programs designed for specific voice clarity challenges</p>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-sm-6 xs-6">
-                <div class="box">
-                <h3>Articulation Mastery</h3>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6 xs-6">
-                <div class="box">
-                <h3>Articulation Mastery</h3>
-                </div>
-            </div>
-        </div>
+        
     </div>
 </div>  
+<div class="template3">
+    <div class="container">
+        <div class="template3_header">
+        <h2>Start Speaking Clearly Today</h2>
+        <p>Transform your unclear speech into confident, crystal clear communication. Join thousands who have improved their voice clarity with our AI-powered training.</p>
+        <a href="#"><button type="button" class="btn btn-default btn4">Test My Voice Free</button></a>
+        <a href="#"><button type="button" class="btn btn-default btn5">Start Training Now</button></a>
+        </div>
+
+    </div>
+</div>
 <footer>
         <div class="footer_main">
             <div class="container">
