--- a/home.html
+++ b/home.html
@@ -28,8 +28,9 @@
       </div>
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav nav-right">
-        <li><a href="/login.html"><button type="submit" class="btn btn-danger btn1">Log in</button></a> </li>
+        <!--    <li><a href="/login.html"><button type="button" class="btn btn-danger btn1">Log in</button></a> </li>
         <li><a href="/signup.html"><button type="button" class="btn btn-default btn2">Sign up</button></a></li>
+        -->
         </ul>
       </div>
     </div>
@@ -39,7 +40,8 @@
     <div class="container">
         <div class="template1_details">
         <h1>Welcome To,<br> Virtual Speech Therapist</h1>
-        <p>We are team of talented designers making websites</p> 
+        <p>We are team of talented designers making websites</p>
+        <a href="/formpage.html"><button type="button" class="btn3" href="#">Get Started</button></a> 
         </div>
     </div>
   </div>
@@ -111,7 +113,7 @@
         <div class="template3_header">
         <h2>Start Speaking Clearly Today</h2>
         <p>Transform your unclear speech into confident, crystal clear communication. Join thousands who have improved their voice clarity with our AI-powered training.</p>
-        <a href="#"><button type="button" class="btn btn-default btn4">Test My Voice Free</button></a>
+        <a href="/formpage.html"><button type="button" class="btn btn-default btn4">Test My Voice Free</button></a>
         <a href="#"><button type="button" class="btn btn-default btn5">Start Training Now</button></a>
         </div>
 
