--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/loginstyle.css">
 </head>
@@ -15,10 +15,10 @@
         <div class="login_input_box">
         <h1>Register to <span>TalkON</span></h1>
         <p>Welcome to Virtual Speech Therapist</p>
-    <form action="" class="login_details">
+    <form action="/home.html" class="login_details">
         <label for="name" class="text">Name</label><br>
         <input type="type" placeholder="your name" name="name" class="input1" required><br>
-        <label for="aob" class="text">Date of birth</label><br>
+        <label for="dob" class="text">Date of birth</label><br>
         <input type="date" id="dob" name="dob" class="input1" required><br>
         <label for="email" class="text">Email</label><br>
         <input type="email" placeholder="your-email@gmail.com" name="email" class="input1" required><br>
@@ -54,7 +54,7 @@
         <input type="checkbox" class="input2" >
         <label for="checkbox" class="text2">Remember me</label>
         <a href="#">Forget Password</a><br>
-        <button type="button">Sign up</button>
+        <button type="submit">Sign up</button>
     </form>
         </div>
      </div>
