--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="login_input_box">
         <h1>Login to <span>TalkON</span></h1>
         <p>Welcome to Virtual Speech Therapist</p>
-    <form action="" class="login_details">
+    <form action="/home.html" class="login_details">
         <label for="username" class="text">Username</label><br>
         <input type="type" placeholder="your-email@gmail.com" name="username" class="input1" required><br>
         <label for="password" class="text">Password</label><br>
@@ -23,7 +23,7 @@
         <input type="checkbox" class="input2" >
         <label for="checkbox" class="text2">Remember me</label>
         <a href="#">Forget Password</a><br>
-        <button type="button">Log in</button>
+        <button type="submit">Log in</button>
     </form>
         </div>
      </div>
@@ -31,7 +31,7 @@
      </div>
     </div>
  
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
